# Copyright (c) 2016 FFLAS-FFPACK
# written by Ashley Lesdalons (ash09) <ashley.lesdalons@e.ujf-grenoble.fr>
# adapted from LinBox configuration
#
# ========LICENCE========
# This file is part of the library FFLAS-FFPACK.
#
# FFLAS-FFPACK is free software: you can redistribute it and/or modify
# it under the terms of the  GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
# ========LICENCE========
#/


pkgincludesubdir=$(pkgincludedir)/checkers

pkgincludesub_HEADERS=        \
		checkers_fflas.h \
		checkers_fflas.inl \
		checkers_ffpack.h \
		checkers_ffpack.inl \
		checker_empty.h \
	 	checker_pluq.inl \
	 	checker_det.inl \
		checker_ftrsm.inl \
		checker_fgemm.inl \
		checker_charpoly.inl \
		checker_invert.inl


EXTRA_DIST=checkers.doxy
