# Copyright (c) 2011 FFLAS-FFPACK
# This file is part of FFLAS-FFPACK
# written by BB <bboyer@imag.fr>
# see COPYING for licence

pkgincludesubdir=$(pkgincludedir)/fflas

pkgincludesub_HEADERS=       \
	   fflas_bounds.inl      \
	   fflas_fcopy.inl       \
	   fflas_ftrmm.inl       \
	   fflas.h               \
	   fflas_faddm.inl       \
	   fflas_fdot.inl        \
	   fflas_ftrmm_src.inl   \
	   fflas_faddmin_src.inl \
	   fflas_fgemm.inl       \
	   fflas_ftrsm.inl       \
	   fflas_faddm_src.inl   \
	   fflas_fgemv.inl       \
	   fflas_ftrsm_src.inl   \
	   fflas_faxpy.inl       \
	   fflas_fger.inl        \
	   fflas_ftrsv.inl

