# Copyright (c) 2011 FFLAS-FFPACK
# This file is part of FFLAS-FFPACK
# written by BB <bboyer@imag.fr>
# see COPYING for licence

pkgincludesubdir=$(pkgincludedir)/ffpack

pkgincludesub_HEADERS=        \
		ffpack_charpoly_danilevski.inl        \
		ffpack_charpoly.inl                   \
		ffpack_charpoly_kgfastgeneralized.inl \
		ffpack.h                              \
		ffpack_charpoly_kgfast.inl            \
		ffpack_krylovelim.inl                 \
		ffpack_charpoly_kglu.inl              \
		ffpack_echelonforms.inl               \
		ffpack_ludivine.inl                   \
		ffpack_frobenius.inl                  \
		ffpack_minpoly_construct.inl          \
		ffpack_minpoly.inl

