# Copyright (c) 2011 FFLAS-FFPACK
# written by BB <bboyer@imag.fr>
# adapted from LinBox configuration
#
# ========LICENCE========
# This file is part of the library FFLAS-FFPACK.
#
# FFLAS-FFPACK is free software: you can redistribute it and/or modify
# it under the terms of the  GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
# ========LICENCE========
#/


pkgincludesubdir=$(pkgincludedir)/ffpack

pkgincludesub_HEADERS=        \
		ffpack_charpoly_danilevski.inl        \
		ffpack_charpoly.inl                   \
		ffpack_charpoly_kgfastgeneralized.inl \
		ffpack.h                              \
		ffpack_charpoly_kgfast.inl            \
		ffpack_krylovelim.inl                 \
		ffpack_charpoly_kglu.inl              \
		ffpack_echelonforms.inl               \
		ffpack_ludivine.inl                   \
		ffpack_pluq.inl                       \
		ffpack_frobenius.inl                  \
		ffpack_minpoly_construct.inl          \
		ffpack_minpoly.inl

EXTRA_DIST=ffpack.doxy
