# Copyright (c) 2011 Fflas-Ffpack
# This file is part of Fflas-Ffpack
# written by BB <bboyer@imag.fr>
# see COPYING for licence

pkgincludesubdir=$(pkgincludedir)/field

pkgincludesub_HEADERS=          \
	  modular-balanced.h        \
	  modular-balanced-double.h \
	  modular-balanced-float.h  \
	  modular-balanced-int32.h  \
	  modular-balanced-int64.h  \
	  modular-positive.h        \
	  modular-float.h           \
	  modular-double.h          \
	  modular-int32.h           \
	  modular-int64.h           \
	  nonzero-randiter.h        \
	  modular-randiter.h        \
	  unparametric.h            \
	  field-general.h

